--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Inversion is a development consultancy built by 
           professional industry experts who exist to challenge the status quo. 
           With a successful track record in shaping some of Egypt’s landmark projects.">
-    <link href="./dist/output.css" rel="stylesheet">
+    <link href="/dist/output.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
@@ -41,7 +41,9 @@
           <div class="flex flex-col items-center justify-center">
             <span class="text-[yellow] text-lg lg:text-4xl ">Guaranteed Highest Return on Investment</span>
             <button class="border text-white p-2 lg:p-4 font-bold m-4 lg:m-8 hover:bg-yellow-400">
-                <a href="https://www.inversion-eg.com/contact"></a>BECOME ONE OR OUR SUCCESS STORIES
+                <a href="https://www.inversion-eg.com/contact" aria-label="bio bio">
+                    BECOME ONE OR OUR SUCCESS STORIES
+                </a>
             </button>
           </div>
     </div>
