add "services" quality

--- a/Services.html
+++ b/Services.html
@@ -2,19 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <meta name="description" content="Inversion is a development consultancy built by 
+          professional industry experts who exist to challenge the status quo. 
+          With a successful track record in shaping some of Egypt’s landmark projects.">
+    <link href="./dist/output.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
     <title>SERVICES | Inversion</title>
-    <link rel="icon" href="./Images/Icon Photo/08d625_e7f2a39dac1d4d2db7f69b2ca5864190~mv2.png" type="">
+    <link rel="icon" href="./Images/Icon Photo/08d625_e7f2a39dac1d4d2db7f69b2ca5864190~mv2.webp" type="">
 </head>
-<body class="bg-[#2d2e2d]">
-    <nav class="fixed w-full top-0 left-0 right-0 z-index-10">
-    <!-- Navbar -->
-        <div class=" text-white flex items-center justify-between px-16 py-4">
-            <div>
-                <a class="text-4xl" href="https://www.inversion-eg.com/">INVERSION</a></div>
 
-            <ul class="flex flex-row  space-x-8 pr-16">
+<body class="bg-[#2d2e2d]">
+    <!-- Navbar -->
+    <nav class="fixed bg-[#2e2e2d] w-full top-0 left-0 right-0 z-index-10">  
+        <div class=" text-white flex items-center justify-around py-4">
+
+            <a class="text-4xl" href="https://www.inversion-eg.com/">INVERSION</a>
+
+            <ul class="flex flex-row space-x-8">
                 <li class="text-[yellow]"><a href="./index.html">Home</a></li>
                 <li class="hover:text-[yellow]"><a href="./about.html">ABOUT</a></li>
                 <li class="hover:text-[yellow]"><a href="./Services.html">SERVICES</a></li>
@@ -35,7 +43,7 @@
             Highest Return On Investment
           </p>
           <div>
-            <img src="./Services Images/IMG_5913.webp">
+            <img alt="team work" src="./Services Images/IMG_5913.webp">
           </div>
         </div>
     </div>
