add "projects" quality

--- a/projects.html
+++ b/projects.html
@@ -2,19 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <meta name="description" content="Inversion is a development consultancy built by 
+          professional industry experts who exist to challenge the status quo. 
+          With a successful track record in shaping some of Egypt’s landmark projects.">
+    <link href="./dist/output.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
     <title>PROJECTS | Inversion</title>
-    <link rel="icon" href="./Images/Icon Photo/08d625_e7f2a39dac1d4d2db7f69b2ca5864190~mv2.png" type="">  
+    <link rel="icon" href="./Images/Icon Photo/08d625_e7f2a39dac1d4d2db7f69b2ca5864190~mv2.webp" type="">
 </head>
 <body class="bg-[#2d2e2d]">
-    <nav class="fixed w-full top-0  left-0 right-0 z-index-10">
     <!-- Navbar -->
-        <div class=" text-white flex items-center justify-between px-16 py-4">
-            <div>
-                <a class="text-4xl" href="https://www.inversion-eg.com/">INVERSION</a></div>
+        
+    <nav class="fixed bg-[#2e2e2d] w-full top-0 left-0 right-0 z-index-10">  
+        <div class=" text-white flex items-center justify-around py-4">
 
-            <ul class="flex flex-row  space-x-8 pr-16">
+            <a class="text-4xl" href="https://www.inversion-eg.com/">INVERSION</a>
+
+            <ul class="flex flex-row space-x-8">
                 <li class="text-[yellow]"><a href="./index.html">Home</a></li>
                 <li class="hover:text-[yellow]"><a href="./about.html">ABOUT</a></li>
                 <li class="hover:text-[yellow]"><a href="./Services.html">SERVICES</a></li>
@@ -42,7 +50,8 @@
                 <div class="flex flex-col p-4 space-y-5 lg:space-y-10">
                     <div class="group relative">
                         <a href="#">
-                            <img class="w-full lg:w-[unset]" src="./Projects Images/08d625_ef299759128145dfbb31d46854e2622f~mv2.png">
+                            <img class="w-full lg:w-[unset]" src="./Projects Images/08d625_ef299759128145dfbb31d46854e2622f~mv2.webp"
+                                 alt="Blue Tree">
                             <div class="bg-gray-950 bg-opacity-50 opacity-0 group-hover:opacity-100 absolute inset-0 p-10">
                                 <span class="block border-t border-white text-white text-3xl font-bold pt-4">Blue Tree</span>
                             </div>
@@ -50,7 +59,8 @@
                     </div>
                     <div class="group relative">
                         <a href="#">
-                            <img class="w-full lg:w-[unset]" src="./Projects Images/08d625_64fd2de6492e4014b29c22d8105426f6~mv2.webp">
+                            <img class="w-full lg:w-[unset]" src="./Projects Images/08d625_64fd2de6492e4014b29c22d8105426f6~mv2.webp"
+                                 alt="Magnom">
                             <div class="bg-gray-950 bg-opacity-50 opacity-0 group-hover:opacity-100 absolute inset-0 p-10">
                                 <span class="block border-t border-white text-white text-3xl font-bold pt-4">Magnom</span>
                             </div>
@@ -58,7 +68,8 @@
                     </div>
                     <div class="group relative">
                         <a href="#">
-                            <img class="w-full lg:w-[unset]" src="./Projects Images/08d625_c194c38fc07a4773a2b0691708d70afa~mv2.webp">
+                            <img class="w-full lg:w-[unset]" src="./Projects Images/08d625_c194c38fc07a4773a2b0691708d70afa~mv2.webp"
+                                 alt="Park Lane Compundhood">
                             <div class="bg-gray-950 bg-opacity-50 opacity-0 group-hover:opacity-100 absolute inset-0 p-10">
                                 <span class="block border-t border-white text-white text-2xl font-bold pt-4">
                                     Park Lane Compundhood
@@ -72,7 +83,8 @@
                     </div>
                     <div class="group relative">
                         <a href="#">
-                            <img class="w-full lg:w-[unset]" src="./Projects Images/08d625_99c9fd776a1543b792d05927b07c95fb~mv2.webp">
+                            <img class="w-full lg:w-[unset]" src="./Projects Images/08d625_99c9fd776a1543b792d05927b07c95fb~mv2.webp"
+                                 alt="River Green">
                             <div class="bg-gray-950 bg-opacity-50 opacity-0 group-hover:opacity-100 absolute inset-0 p-10">
                                 <span class="block border-t border-white text-white text-2xl font-bold pt-4">
                                     River Green
@@ -85,10 +97,12 @@
                         </a>
                     </div>
                     <div>
-                        <img class="w-full lg:w-[unset]" src="./Projects Images/08d625_fdc84421bbdd4c89afd959081020a994~mv2.webp">
+                        <img class="w-full lg:w-[unset]" src="./Projects Images/08d625_fdc84421bbdd4c89afd959081020a994~mv2.webp"
+                             alt="Ay 7aga">
                     </div>
                     <div>
-                        <img class="w-full lg:w-[unset]" src="./Projects Images/08d625_8eadaa10bc8842b4b58d3dfc96410ed5~mv2.webp">
+                        <img class="w-full lg:w-[unset]" src="./Projects Images/08d625_8eadaa10bc8842b4b58d3dfc96410ed5~mv2.webp"
+                             alt="Ay 7aga">
                     </div>
                 </div>
             </div>
@@ -98,32 +112,40 @@
                 <div class="flex flex-col p-4 space-y-5 lg:space-y-10">
                     <div class="group relative">
                         <a href="#">
-                            <img class="w-full lg:w-[unset]" src="./Projects Images/Col 2/08d625_17eadcb567af4948804dfdd8412bf066~mv2.webp">
+                            <img class="w-full lg:w-[unset]" src="./Projects Images/Col 2/08d625_17eadcb567af4948804dfdd8412bf066~mv2.webp"
+                                 alt="Seazen">
                             <div class="bg-gray-950 bg-opacity-50 opacity-0 group-hover:opacity-100 absolute inset-0 p-10">
                                 <span class="block border-t border-white text-white text-2xl font-bold pt-4">Seazen</span>
                             </div>
                         </a>
                     </div>
                     <div>
-                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 2/08d625_5e85ed9a87f24264bb66ee0bb3a0a7a1~mv2.webp">
+                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 2/08d625_5e85ed9a87f24264bb66ee0bb3a0a7a1~mv2.webp"
+                             alt="Ay 7aga">
                     </div>
                     <div>
-                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 2/08d625_aac49ce2a94e47be91c65476726650b0~mv2.webp">
+                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 2/08d625_aac49ce2a94e47be91c65476726650b0~mv2.webp"
+                             alt="Ay 7aga">
                     </div>
                     <div>
-                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 2/08d625_9c0ccf49b38a4f74b0fc2c9137ecf5c2~mv2.webp">
+                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 2/08d625_9c0ccf49b38a4f74b0fc2c9137ecf5c2~mv2.webp"
+                             alt="Ay 7aga">
                     </div>
                     <div>
-                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 2/08d625_911180c5397d4c7b9f00e1a2cd3de2d1~mv2.webp">
+                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 2/08d625_911180c5397d4c7b9f00e1a2cd3de2d1~mv2.webp"
+                             alt="Ay 7aga">
                     </div>
                     <div>
-                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 2/08d625_a3aac5bc4f574ec7a3878809f88eecce~mv2.webp">
+                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 2/08d625_a3aac5bc4f574ec7a3878809f88eecce~mv2.webp"
+                             alt="Ay 7aga">
                     </div>
                     <div>
-                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 2/08d625_8e1a172572294332aca3fe6dd0200744~mv2.webp">
+                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 2/08d625_8e1a172572294332aca3fe6dd0200744~mv2.webp"
+                             alt="Ay 7aga">
                     </div>
                     <div>
-                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 2/08d625_b2c7ca2857be4722ad6c3bf5a7664738~mv2.webp">
+                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 2/08d625_b2c7ca2857be4722ad6c3bf5a7664738~mv2.webp"
+                             alt="Ay 7aga">
                     </div>
                 </div>
             </div>
@@ -132,22 +154,28 @@
             <div>
                 <div class="flex flex-col p-4 space-y-5 lg:space-y-10">
                     <div>
-                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 3/08d625_6a9685c237574765844d3089b8d6ea9c~mv2.webp">
+                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 3/08d625_6a9685c237574765844d3089b8d6ea9c~mv2.webp"
+                             alt="Ay 7aga">
                     </div>
                     <div>
-                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 3/08d625_f3c82ae0223c4d4fbb041dbbc5a6d128~mv2.webp">
+                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 3/08d625_f3c82ae0223c4d4fbb041dbbc5a6d128~mv2.webp"
+                             alt="Ay 7aga">
                     </div>
                     <div>
-                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 3/08d625_dc1d593b40c445f38ffe47b0c514a6fe~mv2.webp">
+                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 3/08d625_dc1d593b40c445f38ffe47b0c514a6fe~mv2.webp"
+                             alt="Ay 7aga">
                     </div>
                     <div>
-                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 3/08d625_cbeb3b5c9dad4f16a76915aae8da4e8d~mv2.webp">
+                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 3/08d625_cbeb3b5c9dad4f16a76915aae8da4e8d~mv2.webp"
+                             alt="Ay 7aga">
                     </div>
                     <div>
-                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 3/08d625_f884ef790d31411bb739e9896a05038a~mv2.webp">
+                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 3/08d625_f884ef790d31411bb739e9896a05038a~mv2.webp"
+                             alt="Ay 7aga">
                     </div>
                     <div>
-                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 3/08d625_2fcca57b08f94eaea7c44c79509d6cbf~mv2.webp">
+                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 3/08d625_2fcca57b08f94eaea7c44c79509d6cbf~mv2.webp"
+                             alt="Ay 7aga">
                     </div>
                 </div>
             </div>
