add "team" quality

--- a/team.html
+++ b/team.html
@@ -2,19 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <meta name="description" content="Inversion is a development consultancy built by 
+          professional industry experts who exist to challenge the status quo. 
+          With a successful track record in shaping some of Egypt’s landmark projects.">
+    <link href="./dist/output.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
     <title>TEAM | Inversion</title>
-    <link rel="icon" href="./Images/Icon Photo/08d625_e7f2a39dac1d4d2db7f69b2ca5864190~mv2.png" type="">
+    <link rel="icon" href="./Images/Icon Photo/08d625_e7f2a39dac1d4d2db7f69b2ca5864190~mv2.webp" type="">
 </head>
 <body class="bg-[#2d2e2d]">
-    <nav class="fixed w-full top-0 left-0 right-0 z-index-10">
+    
     <!-- Navbar -->
-        <div class=" text-white flex items-center justify-between px-16 py-4">
-            <div>
-                <a class="text-4xl" href="https://www.inversion-eg.com/">INVERSION</a></div>
+        
+    <nav class="fixed bg-[#2e2e2d] w-full top-0 left-0 right-0 z-index-10">  
+        <div class=" text-white flex items-center justify-around py-4">
 
-            <ul class="flex flex-row  space-x-8 pr-16">
+            <a class="text-4xl" href="https://www.inversion-eg.com/">INVERSION</a>
+
+            <ul class="flex flex-row space-x-8">
                 <li class="text-[yellow]"><a href="./index.html">Home</a></li>
                 <li class="hover:text-[yellow]"><a href="./about.html">ABOUT</a></li>
                 <li class="hover:text-[yellow]"><a href="./Services.html">SERVICES</a></li>
@@ -34,7 +43,7 @@
             Meet Our Team
           </p>
           <div>
-            <img src="./Team Images/TeamFull.webp">
+            <img alt="team full" src="./Team Images/TeamFull.webp">
           </div>
         </div>
     </div>
@@ -45,7 +54,7 @@
         <div class="grid grid-cols-1 lg:grid-cols-3 p-4 gap-10 ">
 
                 <div>
-                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state.webp"></a>
+                    <a href="#"><img alt="Mohamed Diab" class="w-full" src="./Team Images/Image-empty-state.webp"></a>
                         <span class="text-white font-bold text-2xl whitespace-pre-line">Mohamed Diab</span><br>
                         <span class="text-white">CEO</span>
                         <p class="text-white text-sm whitespace-pre-line mb-4">
@@ -57,7 +66,7 @@
                 </div>
 
                 <div>
-                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state7.webp"></a>
+                    <a href="#"><img alt="Kamal Ibrahim" class="w-full" src="./Team Images/Image-empty-state7.webp"></a>
                         <span class="text-white font-bold text-2xl whitespace-pre-line">Kamal Ibrahim</span><br>
                         <span class="text-white">CDO</span>
                         <p class="text-white text-sm whitespace-pre-line mb-4">
@@ -69,7 +78,7 @@
                 </div>
 
                 <div>
-                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state8.webp"></a>
+                    <a href="#"><img alt="Rania Gad" class="w-full" src="./Team Images/Image-empty-state8.webp"></a>
                         <span class="text-white font-bold text-2xl whitespace-pre-line">Rania Gad</span><br>
                         <span class="text-white">Marketing Director</span>
                         <p class="text-white text-sm whitespace-pre-line mb-4">
@@ -81,7 +90,7 @@
                 </div>
 
                 <div>
-                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state2.webp"></a>
+                    <a href="#"><img alt="Ramy Al-Qady" class="w-full" src="./Team Images/Image-empty-state2.webp"></a>
                         <span class="text-white font-bold text-2xl whitespace-pre-line">Ramy Al-Qady</span><br>
                         <span class="text-white">Development Director</span>
                         <p class="text-white text-sm whitespace-pre-line mb-4">
@@ -93,7 +102,7 @@
                 </div>
 
                 <div>
-                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state9.webp"></a>
+                    <a href="#"><img alt="Ayman Saad El Dien" class="w-full" src="./Team Images/Image-empty-state9.webp"></a>
                         <span class="text-white font-bold text-2xl whitespace-pre-line">Ayman Saad El Dien</span><br>
                         <span class="text-white">Projects Controls Director</span>
                         <p class="text-white text-sm whitespace-pre-line mb-4">
@@ -105,7 +114,7 @@
                 </div>
 
                 <div>
-                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state10.webp"></a>
+                    <a href="#"><img alt="Mohamed Maihoub" class="w-full" src="./Team Images/Image-empty-state10.webp"></a>
                         <span class="text-white font-bold text-2xl whitespace-pre-line">Mohamed Maihoub</span><br>
                         <span class="text-white">Development Manager</span>
                         <p class="text-white text-sm whitespace-pre-line mb-4">
@@ -117,7 +126,7 @@
                 </div>
 
                 <div>
-                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state3.webp"></a>
+                    <a href="#"><img alt="Ahmed Lotfy" class="w-full" src="./Team Images/Image-empty-state3.webp"></a>
                         <span class="text-white font-bold text-2xl whitespace-pre-line">Ahmed Lotfy</span><br>
                         <span class="text-white">Projects Coordinator</span>
                         <p class="text-white text-sm whitespace-pre-line mb-4">
@@ -129,7 +138,7 @@
                 </div>
 
                 <div>
-                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state11.webp"></a>
+                    <a href="#"><img alt="Moamen Badrawy" class="w-full" src="./Team Images/Image-empty-state11.webp"></a>
                         <span class="text-white font-bold text-2xl whitespace-pre-line">Moamen Badrawy</span><br>
                         <span class="text-white">Assistant Project Manager</span>
                         <p class="text-white text-sm whitespace-pre-line mb-4">
@@ -141,7 +150,7 @@
                 </div>
 
                 <div>
-                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state12.webp"></a>
+                    <a href="#"><img alt="Aya Saad" class="w-full" src="./Team Images/Image-empty-state12.webp"></a>
                         <span class="text-white font-bold text-2xl whitespace-pre-line">Aya Saad</span><br>
                         <span class="text-white">Business Development Engineer</span>
                         <p class="text-white text-sm whitespace-pre-line mb-4">
@@ -153,7 +162,7 @@
                 </div>
 
                 <div>
-                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state4.webp"></a>
+                    <a href="#"><img alt="Abeer Ibrahim" class="w-full" src="./Team Images/Image-empty-state4.webp"></a>
                         <span class="text-white font-bold text-2xl whitespace-pre-line">Abeer Ibrahim</span><br>
                         <span class="text-white">Office Manager</span>
                         <p class="text-white text-sm whitespace-pre-line mb-4">
@@ -165,7 +174,7 @@
                 </div>
 
                 <div>
-                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state13.webp"></a>
+                    <a href="#"><img alt="Karim Azmy" class="w-full" src="./Team Images/Image-empty-state13.webp"></a>
                         <span class="text-white font-bold text-2xl whitespace-pre-line">Karim Azmy</span><br>
                         <span class="text-white">Branding & Marketing Exectuive</span>
                         <p class="text-white text-sm whitespace-pre-line mb-4">
@@ -177,7 +186,7 @@
                 </div>
 
                 <div>
-                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state14.webp"></a>
+                    <a href="#"><img alt="Menna Mostafa" class="w-full" src="./Team Images/Image-empty-state14.webp"></a>
                         <span class="text-white font-bold text-2xl whitespace-pre-line">Menna Mostafa</span><br>
                         <span class="text-white">Account Executive</span>
                         <p class="text-white text-sm whitespace-pre-line mb-4">
@@ -189,7 +198,7 @@
                 </div>
 
                 <div>
-                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state5.webp"></a>
+                    <a href="#"><img alt="Reem Hesham" class="w-full" src="./Team Images/Image-empty-state5.webp"></a>
                         <span class="text-white font-bold text-2xl whitespace-pre-line">Reem Hesham</span><br>
                         <span class="text-white">Development Engineer</span>
                         <p class="text-white text-sm whitespace-pre-line mb-4">
@@ -201,7 +210,7 @@
                 </div>
 
                 <div>
-                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state15.webp"></a>
+                    <a href="#"><img alt="Rewan Hesham" class="w-full" src="./Team Images/Image-empty-state15.webp"></a>
                         <span class="text-white font-bold text-2xl whitespace-pre-line">Rewan Hesham</span><br>
                         <span class="text-white">Development Engineer</span>
                         <p class="text-white text-sm whitespace-pre-line mb-4">
@@ -213,7 +222,7 @@
                 </div>
 
                 <div>
-                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state16.webp"></a>
+                    <a href="#"><img alt="Ziad Yasser" class="w-full" src="./Team Images/Image-empty-state16.webp"></a>
                         <span class="text-white font-bold text-2xl whitespace-pre-line">Ziad Yasser</span><br>
                         <span class="text-white">Development Engineer</span>
                         <p class="text-white text-sm whitespace-pre-line mb-4">
@@ -225,7 +234,7 @@
                 </div>
 
                 <div>
-                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state6.webp"></a>
+                    <a href="#"><img alt="Mariam Khaled" class="w-full" src="./Team Images/Image-empty-state6.webp"></a>
                         <span class="text-white font-bold text-2xl whitespace-pre-line">Mariam Khaled</span><br>
                         <span class="text-white">Development Engineer</span>
                         <p class="text-white text-sm whitespace-pre-line mb-4">
@@ -237,7 +246,7 @@
                 </div>
 
                 <div>
-                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state17.webp"></a>
+                    <a href="#"><img alt="Basma Tarek" class="w-full" src="./Team Images/Image-empty-state17.webp"></a>
                         <span class="text-white font-bold text-2xl whitespace-pre-line">Basma Tarek</span><br>
                         <span class="text-white">Development Engineer</span>
                         <p class="text-white text-sm whitespace-pre-line mb-4">
