edit label for inputs

--- a/contact.html
+++ b/contact.html
@@ -42,16 +42,16 @@
 
         <div class="mx-10 lg:mx-60 my-8 lg:my-16">
             <form class="flex flex-col">
-                <label class="text-white my-2">First Name</label>
-                <input type="text" class="p-2 text-white bg-[#2d2e2d] border border-[yellow]">
-                <label class="text-white my-2">Last Name</label>
-                <input type="text" class="p-2 text-white bg-[#2d2e2d] border border-[yellow]">
-                <label class="text-white my-2">Email</label>
-                <input type="email" class="p-2 text-white bg-[#2d2e2d] border border-[yellow]">
-                <label class="text-white my-2">Phone</label>
-                <input type="phone" class="p-2 text-white bg-[#2d2e2d] border border-[yellow]">
-                <label class="text-white my-2">Comments</label>
-                <input type="text" class="h-48 p-2 text-white bg-[#2d2e2d] border border-[yellow] mb-12">
+                <label for="FirstName" class="text-white my-2">First Name</label>
+                <input id="FirstName" type="text" class="p-2 text-white bg-[#2d2e2d] border border-[yellow]">
+                <label for="LastName" class="text-white my-2">Last Name</label>
+                <input id="LastName" type="text" class="p-2 text-white bg-[#2d2e2d] border border-[yellow]">
+                <label for="Email" class="text-white my-2">Email</label>
+                <input id="Email" type="email" class="p-2 text-white bg-[#2d2e2d] border border-[yellow]">
+                <label for="Phone" class="text-white my-2">Phone</label>
+                <input id="Phone" type="phone" class="p-2 text-white bg-[#2d2e2d] border border-[yellow]">
+                <label for="Comment" class="text-white my-2">Comments</label>
+                <input id="Comment" type="text" class="h-48 p-2 text-white bg-[#2d2e2d] border border-[yellow] mb-12">
                 <button class="text-[yellow] font-bold border border-[yellow] mr-auto px-12 py-4
                  hover:text-white hover:border-[white] mb-60">SEND</button>
         </div>   
